Created Landfills in HK

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <style>
 body {
-         background-color: #d0e4fe;
+         background-color:  yellow;
 }
 h1 {
          text-align: center;
@@ -42,29 +42,59 @@ h1 {
 	color:white;
 }
 h1 {
-	background-color: black;
+	background-color: yellow;
+}
+li {
+    display: inline;
+}
+li {
+    float: left;
+}
+
+a {
+    display: block;
+    padding: 8px;
+    background-color: #dddddd;
+}
+ul {
+    background-color: #dddddd;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: red;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: #111;
 }
 </style>
+<ul>
+  <li><a href="http://tushar8090.github.io/landfills/">Home</a></li>
+  <li><a href="http://tushar8090.github.io/waste/">Action</a></li>
+  <li><a href="http://tushar8090.github.io/Tushar/">What can we do</a></li>
+</ul>
 <body>
 <h1>Landfills in HK</h1>
-<p>There are only three landfills left in Hong Kong and people believe by 2020 the three landfills are going to be full and then they will have to build incinerators and burn all the waste then dump it in the ocean. The waste levels in Hong Kong are going very high and below is the list of waste we produced through the year 2000-2015.<p>
-<ul> 
- <li>In the year 2000 we produced 2.7 million tons of waste the whole year</li>
-	 <li>In 2002 we produced 2.73 million tons</li>
-	 <li>In 2003 we produced 2.9 million tons</li>
-	 <li>In 2004 we produced 3.06 million tons</li>
-	 <li>In 2005 we produced  3,050,052 tons</li>
-	 <li> In 2006 we produced 3.3 million tons</li>
-	 <li>In 2007 we produced 3.3 million tons</li>
-	 <li>In 2008 we produced 3.2 million tons</li>
-	 <li>In 2009 we produced 2.91 million tons</li>
-	 <li>In 2010 we produced 2.81 million tons</li>
-	 <li>In 2011 we produced 2.82 million tons</li>
-	 <li>In 2012 we produced 2.5 million tons</li>
-	 <li>In 2013 we produced 1.31 million tons</li>
-	 <li>In 2014 we produced 1.67 million tons</li>
-	 <li>In 2015 we produced 1.7 million tons</li>
-</ul>
+<p>There are only three landfills left in Hong Kong and people believe by 2020 the three landfills are going to be full and then they will have to build incinerators and burn all the waste then dump it in the ocean. The waste levels in Hong Kong are going very high.</p>
+
+ <p>In the year 2000 we produced 2.7 million tons of waste the whole year, in 2002 we produced 2.73 million tons, in 2003 we produced 2.9 million tons, in 2004 we produced 3.06 million tons, In 2005 we produced  3,050,052 tons,  in 2006 we produced 3.3 million tons, in 2007 we produced 3.3 million tons, in 2008 we produced 3.2 million tons, in 2009 we produced 2.91 million tons, in 2010 we produced 2.81 million tons, in 2011 we produced 2.82 million tons, In 2012 we produced 2.5 million tons, in 2013 we produced 1.31 million tons, in 2014 we produced 1.67 million tons, in 2015 we produced 1.7 million tons</p>
+
 <h3> How is the HK government taking action?</h3>
  <p>The HK govnrement has taken action by the 50 cents action for a plastic bag. A good website over here to get more info.
 <a href="http://www.scmp.com/news/hong-kong/article/1752512/everything-you-need-know-about-hong-kongs-new-plastic-bag-levy">Click here for the website</a>
@@ -75,6 +105,8 @@ h1 {
 <p>More then 3200 tons of food waste goes into  the landfills everyday and the weight of that much is about 1,103 elephants. The fod waste levels in Hong Kong is going very high and to stop this you have to save your things for afterwards or just donate your food to poor people. In the world there are a lot of poor people oso if you go any where arond the world remember to donate your food.</p>
 <h3>Targets</h3>
 <p>HK wants hygienic landfills so the people who live near the landfill don't get sick/ill and also to recycle more and to do that Hong Kong needs to have more recycling bins so more people will recycle.There are still a few charities out there which still recycle things and try to stop food waste but don't just leave all the work all to them you have to do something. Below is a video about waste.</p>
+<iframe width="1000" height="800" src="https://www.youtube.com/embed/b3FZQrqj9Ig?rel=0" frameborder="0" allowfullscreen></iframe>
+<p>There are some missing words in the end and those are care about the world then the world will care about you</p>
 </body>
 <footer>
      copyright&copy Tushar Sharma 2016
